<resources>
    <string name="app_name">InsulinTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_food">Add Food</string>
    <string name="q2_answer">The insulin index – a measure used to quantify the typical insulin response to various foods. Insulin indexes are scaled relative to white bread, while glycemic index scores nowadays are usually scaled with respect to pure glucose. The insulin index compares foods in amounts with equal overall caloric content (240 kcal or 1000 kJ). Here you can see a little example, that shows the differences:</string>
    <string name="q1_answer">Insulin is a naturally occurring hormone made by your pancreas that helps your body use sugar for energy. If your pancreas doesn’t work as it should, it may not make or release the insulin you need to control your blood sugars, resulting in diabetes. Insulin moves glucose from your blood into cells all over your body. Glucose comes from both food and your body’s own natural release of stored glucose. Think of insulin as the “key” that opens the “doors” of the cells in your body. Once insulin opens your cell doors, glucose can leave your bloodstream and move into your cells where you use it for energy. Without enough insulin, glucose can’t get into your cells and instead builds up in your blood (hyperglycemia). Many conditions can affect your body’s ability to produce and release insulin. They include: \n• Gestational diabetes, which is diabetes that begins during pregnancy. \n• Prediabetes, when your body is resistant to insulin (can’t use insulin as it should), but blood sugar levels aren’t high enough for a Type 2 diabetes diagnosis. \n• Type 1 diabetes, when your pancreas doesn’t make insulin or doesn’t make enough to control blood sugar. \n• Type 2 diabetes, when your pancreas doesn’t produce enough insulin, or your body can’t use the insulin as it should. \n• Metabolic syndrome (insulin resistance syndrome), a group of risk factors (including insulin resistance) that increase the risk of diabetes and heart disease. Insulin resistance means that the cells in your body can’t use glucose from your blood as energy.</string>
    <string name="q1_title">What is insulin?</string>
    <string name="q2_title">Insulin index = glycemic index?</string>
    <string name="q3_title">Why is insulin index important?</string>
    <string name="q3_answer">The insulin index can be more useful than either the glycemic index or the glycemic load because certain foods, such as lean meats, cause an insulin response despite the fact that they contain very low amounts of carbohydrates. In type 2 diabetes, the cells of the body become resistant to the effects of insulin as the receptors which bind to the hormone become less sensitive to insulin concentrations resulting in hyperinsulinemia and disturbances in insulin release. With a reduced response to insulin, the beta cells of the pancreas secrete increasing amounts of insulin in response to the continued high blood glucose levels resulting in hyperinsulinemia. In insulin resistant tissues, a threshold concentration of insulin is reached causing the cells to uptake glucose and therefore decreases blood glucose levels. Studies have shown that the high levels of insulin resulting from insulin resistance might enhance insulin resistance. With that being sad, it is important to take a closer look at the insulin level, so it won’t be stayed high all the time and the hyperinsulinemia could be (mostly) prevented.</string>
    <string name="q4_title">Why does physical activity have a high importance in controlling your insulin level?</string>
    <string name="q5_title">What is type 2 diabetes?</string>
    <string name="q5_answer">Type 2 diabetes is a common condition that causes the level of sugar (glucose) in the blood to become too high. It\'s caused by problems with a chemical in the body (hormone) called insulin. It\'s often linked to being overweight or inactive, or having a family history of type 2 diabetes. There\'s nothing you cannot eat if you have type 2 diabetes, but you\'ll have to limit certain foods. You should:  eat a wide range of foods – including fruit, vegetables and some starchy foods like pasta  keep sugar, fat and salt to a minimum  eat breakfast, lunch and dinner every day – do not skip meals Many people have type 2 diabetes without realising. This is because symptoms do not necessarily make you feel unwell. Symptoms of type 2 diabetes include: \n • peeing more than usual, particularly at night \n • feeling thirsty all the time \n • feeling very tired \n • losing weight without trying to \n • itching around your penis or vagina, or repeatedly getting thrush \n • cuts or wounds taking longer to heal \n • blurred vision You\'re more at risk of developing type 2 diabetes if you: \n • are over 40 (or 25 for south Asian people) \n • have a close relative with diabetes (such as a parent, brother or sister) \n • are overweight or obese \n • are of Asian, African-Caribbean or black African origin (even if you were born in the UK)</string>
    <string name="q6_title">What is insulin resistance syndrome?</string>
    <string name="q6_answer">Insulin resistance is when cells in your muscles, fat, and liver don’t respond well to insulin and can’t use glucose from your blood for energy. To make up for it, your pancreas makes more insulin. Over time, your blood sugar levels go up. Insulin resistance syndrome includes a group of problems like obesity, high blood pressure, high cholesterol, and type 2 diabetes. You can\'t tell that you have insulin resistance by how you feel. You\'ll need to get a blood test that checks your blood sugar levels. Some signs of insulin resistance include: \n • A waistline over 40 inches (101 cm) in men and 35 inches (88 cm) in women \n • Blood pressure readings of 130/80 or higher \n • A fasting glucose level over 100 mg/dL \n • A fasting triglyceride level over 150 mg/dL \n • A HDL cholesterol level under 40 mg/dL in men and 50 mg/dL in women \n • Skin tags \n • Patches of dark, velvety skin called acanthosis nigricans Risk Factors and Causes of Insulin Resistance: \n • Things that can make this condition more likely include: \n • Obesity, especially belly fat \n • Inactive lifestyle \n • Diet high in carbohydrates \n • Gestational diabetes \n • Health conditions like nonalcoholic fatty liver disease and polycystic ovary syndrome \n • A family history of diabetes \n • Smoking \n • Ethnicity — it’s more likely if your ancestry is African, Latino, or Native American \n • Age — it’s more likely after 45 \n • Hormonal disorders like Cushing’s syndrome and acromegaly \n • Medications like steroids, antipsychotics, and HIV medications \n • Sleep problems like sleep apnea</string>
</resources>