<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    tools:context=".fragments.InfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/infoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="Info"
        android:textColor="@color/dBlue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/infoTitle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/dBlue"
            android:text="@string/q1_title"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/q1_answer"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/dBlue"
            android:text="@string/q2_title"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/q2_answer"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/picture1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/dBlue"
            android:text="@string/q3_title"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/q3_answer" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/dBlue"
            android:text="@string/q4_title"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="A measurement of blood sugar called postprandial glycemia, which has been linked with heart disease risk, averaged 12 percent lower when study participants took a walk after eating, compared with those who exercised at other times. The largest drop in postprandial glycemia, 22 percent, was achieved by walking after dinner, the study authors found.  &quot;If you have type 2 diabetes, there is a guideline to be active for at least 150 minutes a week,&quot; said study author Andrew Reynolds, a researcher at the University of Otago, in New Zealand. But, he added, &quot;the benefits we observed due to physical activity after meals suggest that current guidelines should be amended to specify after-meal activity, particularly when meals contain a substantial amount of carbohydrates,&quot; he said. &quot;Consider walking after you eat as part of your daily routine,&quot; he added.
Another study, which was led by Andrea Smith, who's with the Health Behavior Research Center at University College London, specificized the amount of exercising time and its effect on health as following: The researchers found that those who exercised at least 150 minutes a week had a 26 percent lower risk of developing type 2 diabetes. The results also suggested that exercising more than the recommended 150 minutes had even greater benefits in reducing the risk of diabetes, cutting it by more than half.
"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/dBlue"
            android:text="@string/q5_title"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/q5_answer" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/dBlue"
            android:text="@string/q6_title"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/q6_answer" />
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>